<resources>
    <string name="app_name">Nexturn</string>
    <string name="email">E-Mail</string>>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="forgot">Forgot Password?</string>
    <string name="dob">Date of Birth</string>
    <string name="phone">Mobile</string>
    <string name="facebook_app_id">305132779902094</string>
    <string name="sign_up_mail">Sign up with E-Mail</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="pata">Location</string>
    <string name="gender">Gender</string>
    <style name="drawer_open">Drawer opened</style>
    <style name="drawer_close">Drawer closed</style>

    <string name="maps_style">[
    {    "featureType": "administrative.neighborhood",
    "stylers": [
    {
    "visibility": "off"
    }
    ]
    },
    {
    "featureType": "poi",
    "elementType": "labels.text",
    "stylers": [
    {
    "visibility": "off"
    }
    ]
    },
    {
    "featureType": "poi.business",
    "stylers": [
    {
    "visibility": "off"
    }
    ]
    },
    {
    "featureType": "poi.park",
    "elementType": "labels.text",
    "stylers": [
    {
    "visibility": "off"
    }
    ]
    },
    {
    "featureType": "poi.place_of_worship",
    "stylers": [
    {
    "visibility": "on"
    }
    ]
    },
    {
    "featureType": "poi.school",
    "stylers": [
    {
    "visibility": "on"
    }
    ]
    },
    {
    "featureType": "road",
    "elementType": "labels",
    "stylers": [
    {
    "visibility": "off"
    }
    ]
    },
    {
    "featureType": "road.arterial",
    "stylers": [
    {
    "visibility": "off"
    }
    ]
    },
    {
    "featureType": "road.highway",
    "elementType": "labels",
    "stylers": [
    {
    "visibility": "off"
    }
    ]
    },
    {
    "featureType": "road.local",
    "stylers": [
    {
    "visibility": "off"
    }
    ]
    },
    {
    "featureType": "transit",
    "stylers": [
    {
    "visibility": "on"
    }
    ]
    },
    {
    "featureType": "water",
    "elementType": "labels.text",
    "stylers": [
    {
    "visibility": "off"
    }
    ]
    }
    ]</string>
    <string-array name="indian_states">
        <item>Select your State</item>>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_profile_page">ProfilePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="google_maps_key">AIzaSyCO012JPUEhWQZwWhm7pP8rEVbxvWtAZkk</string>
    <string name="aboutName">Nexturn 1.0</string>
    <string name="aboutContent">Nexturn is a lift hailing app designed specifically for people stranded on roadside looking for help. </string>
</resources>
