<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/scroll">
<LinearLayout    android:id="@+id/activity_login_page"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.nexturn.LoginPage"
    android:clipToPadding="false">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/logo"
        android:contentDescription=""
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <com.nexturn.ourTextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/title"
        android:textSize="36sp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/l4"
        android:baselineAligned="false"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="3">

            <com.nexturn.ourTextView
                android:text="@string/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView2"
                android:textSize="24sp"
                tools:ignore="NestedWeights"
                android:layout_weight="1"
                android:gravity="center_vertical" />

            <com.nexturn.ourTextView
                android:text="@string/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView3"
                android:textSize="24sp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:layout_weight="2">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/editText"
                android:hint="Email Address" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText2"
                android:hint="Password"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal" />

        <Button
            android:text="@string/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="com.google.android.gms.common.SignInButton"
        android:id="@+id/google"
        android:layout_gravity="left"
        android:gravity="left|start"
        android:layout_marginLeft="20dp"
        app:buttonSize="wide"
        android:onClick="googlelogin" />

    <ImageView
        app:srcCompat="@drawable/gaadi"
        android:id="@+id/imageView2"
        android:alpha="0.5"
        android:layout_width="200dp"
        android:layout_marginRight="25dp"
        android:layout_gravity="bottom|right"
        android:layout_height="200dp" />

</LinearLayout>
</ScrollView>