<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nexturn.Activites.Registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/userImage">

        <android.support.v7.widget.CardView
            android:id="@+id/card_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/userImage"
            android:layout_marginTop="20dp"
            app:cardElevation="3dp">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="20dp"
                android:baselineAligned="false">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <view
                        class="com.nexturn.ModifiedViews.ourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:text="@string/fname"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/fname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <view
                        class="com.nexturn.ModifiedViews.ourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/fname"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/lname"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/lname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <view
                        android:id="@+id/view2"
                        class="com.nexturn.ModifiedViews.ourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="Email-ID"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/email_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="abc@xyz.com"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <view
                        android:id="@+id/gender"
                        class="com.nexturn.ModifiedViews.ourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/gender"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/gendertick"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Male" />

                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.13"
                            android:text="Female" />

                        <RadioButton
                            android:id="@+id/others"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="Others" />
                    </RadioGroup>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <view
                        android:id="@+id/dob"
                        class="com.nexturn.ModifiedViews.ourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="false"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/dob"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="18sp" />

                    <com.nexturn.ModifiedViews.ourTextView
                        android:id="@+id/dobenter"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center_vertical|center_horizontal"
                        android:inputType="date"
                        android:onClick="setState_list"
                        android:text="Click Me"
                        android:textSize="18sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <view
                        android:id="@+id/mobile"
                        class="com.nexturn.ModifiedViews.ourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/phone"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number"
                        android:maxLength="14"
                        android:text="+91-" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <view
                        android:id="@+id/view"
                        class="com.nexturn.ModifiedViews.ourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Aadhar ID"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />

                    <EditText
                        android:id="@+id/aadhar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="____/____/____"
                        android:inputType="number"
                        android:maxLength="12"
                        android:singleLine="true" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <view
                        android:id="@+id/loc"
                        class="com.nexturn.ModifiedViews.ourTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="false"
                        android:layout_weight="1"
                        android:text="@string/pata"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/state_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:animateLayoutChanges="false"
                        android:entries="@array/indian_states"
                        android:gravity="center_vertical" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <view
                        android:id="@+id/view3"
                        class="com.nexturn.ModifiedViews.ourTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="Password"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/pass"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:maxLength="12"
                            android:password="true" />

                        <ImageView
                            android:id="@+id/passchange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="passs"
                            app:srcCompat="@drawable/ic_lock_outline_black_48dp" />
                    </LinearLayout>

                </TableRow>

            </TableLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:onClick="setUserImage"
        app:srcCompat="@drawable/placeholder" />


</RelativeLayout>