<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/user_image_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <view
            android:id="@+id/name_profile"
            class="com.nexturn.ModifiedViews.ourTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_image_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="Loading......."
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <view
            android:id="@+id/email_profile"
            class="com.nexturn.ModifiedViews.ourTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="abc@xyz.com"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/email_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:translationZ="2dp"
            app:cardElevation="3dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <view
                        android:id="@+id/view7"
                        class="com.nexturn.ModifiedViews.ourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gender"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <view
                        android:id="@+id/gender_profile"
                        class="com.nexturn.ModifiedViews.ourTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Loading..."
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <view
                        android:id="@+id/view6"
                        class="com.nexturn.ModifiedViews.ourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/phone"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <view
                        android:id="@+id/phone_profile"
                        class="com.nexturn.ModifiedViews.ourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Loading..."
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <view
                        android:id="@+id/view8"
                        class="com.nexturn.ModifiedViews.ourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dob"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <view
                        android:id="@+id/dob_profile"
                        class="com.nexturn.ModifiedViews.ourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Loading..."
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <view
                        android:id="@+id/view9"
                        class="com.nexturn.ModifiedViews.ourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Aadhar ID"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <view
                        android:id="@+id/aadhar_profile"
                        class="com.nexturn.ModifiedViews.ourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Loading..."
                        android:textSize="18sp" />
                </TableRow>

            </TableLayout>


        </android.support.v7.widget.CardView>

    </android.support.percent.PercentRelativeLayout>
</ScrollView>
